adapt backend search to complex filter
